# Valdi

./: AGENTS.md  MODULE.bazel  README.md  fossa-deps.yml
.github/: pr-area-labeler.yml
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: bzl-changes.yml  pr-area-labeler.yml  sensitive-file-notice.yml
bzl/: dependencies.bzl  valdi_toolchains.bzl
bzl/valdi/: BUILD.bazel  valdi_collapse_web_paths.bzl  valdi_compiled.bzl  valdi_projectsync.bzl
compiler/compiler/Compiler/Sources/: ValdiCompilerArguments.swift  ValdiCompilerRunner.swift
docs/: INSTALL.md  README.md
docs/docs/: advanced-animations.md  faq.md
libs/utils/src/utils/debugging/: Trace.cpp
npm_modules/cli/.metadata/: MODULE.bazel.template
npm_modules/cli/src/commands/: bootstrap.ts  projectsync.ts
npm_modules/cli/src/utils/: BazelClient.ts
registry/: bazel_registry.json
registry/modules/rules_android_ndk/: metadata.json
registry/modules/rules_android_ndk/0.1.3/: source.json
registry/modules/rules_kotlin/: metadata.json
registry/modules/rules_kotlin/1.9.0/: source.json
registry/modules/rules_swift/: metadata.json
registry/modules/rules_swift/3.1.2/: source.json
registry/modules/toolchains_llvm/: metadata.json
registry/modules/toolchains_llvm/1.3.0/: source.json
src/valdi_modules/src/valdi/valdi_http/: BUILD.bazel
src/valdi_modules/src/valdi/valdi_http/web/: tsconfig.json
tools/ci/: run_tests.sh  validate_registry.sh
valdi/: BUILD.bazel  valdi.bzl
valdi/test/integration/: LayoutRegression_tests.cpp
valdi/test/runtime/: YogaLayout_tests.cpp
(+41 files in other folders)
