load("@aspect_rules_ts//ts:defs.bzl", "ts_project")
load("//bzl/valdi:valdi_module.bzl", "valdi_module")

# Example of including additional ts sources that get transpiled
# and bundled into the node module target for this valdi module
ts_project(
    name = "valdi_http_web",
    srcs = glob([
        "web/**/*.ts",
        "src/**/*.d.ts",
    ]) + [
        "//src/valdi_modules/src/valdi/coreutils:coreutils_dts",
    ],
    allow_js = True,
    composite = True,
    declaration = True,
    transpiler = "tsc",
    tsconfig = "web/tsconfig.json",
)

valdi_module(
    name = "valdi_http",
    srcs = glob([
        "src/**/*.ts",
        "src/**/*.tsx",
        "test/**/*.ts",
        "test/**/*.tsx",
    ]) + [
        "tsconfig.json",
    ],
    android_output_target = "release",
    ios_module_name = "SCCValdiHTTP",
    ios_output_target = "release",
    native_deps = ["@valdi//src/valdi_modules/src/cpp/valdi_http:valdi_http_cpp"],
    visibility = ["//visibility:public"],
    web_deps = [":valdi_http_web"],
    web_register_native_module_id_overrides = {
        "valdi_http/web/WebHTTPClient.js": "valdi_http/src/NativeHTTPClient",
    },
    deps = [
        "//src/valdi_modules/src/valdi/coreutils",
        "//src/valdi_modules/src/valdi/valdi_core",
    ],
)
